
Changes in version 0.99.3 (2021-04-27)
+ Added "biodb" as watched tag on my profile on support site https://support.bioconductor.org/.

Changes in version 0.99.4 (2021-04-27)
+ Move long tests to separate directory "long".

Changes in version 0.99.5 (2021-04-27)
+ Add missing parameters documentation for runGenericTests().

Changes in version 0.99.6 (2021-04-27)
+ Rebuilding doc.

Changes in version 0.99.7 (2021-04-27)
+ Renamed Biodb class into BiodbMain in order to avoid "Rd warning: Previous alias or file overwritten by alias: biodb" on Windows platform.
+ Implement newInst() global function for creating new BiodbMain instance.

Changes in version 0.99.8 (2021-05-06)
+ Correct template travis.yml for extensions: missing deps install, run all checks.
+ Improve template Makefile for extensions.
+ Add missing test-cpp.R template file for running C++ tests from testthat.
+ Limit by default the entries to test to one entry inside generic tests.
+ Improve vignettes.
+ Rename default vignette into "biodb.Rmd".

Changes in version 0.99.9 (2021-05-07)
+ Solving some NOTES from BiocCheck.
+ Correct example in Progress class.

Changes in version 0.99.10 (2021-05-07)
+ Correct documentation of C++ function.

Changes in version 0.99.11 (2021-05-17)
+ Change example inside BiodbConfig to avoid misinterpretation of `set('cache.directory', '~/my.biodb.cache')`, leading to believe that some files are written inside USER HOME folder when running the example.

Changes in version 1.0.1 (2021-05-20)
+ Bug fix: correct some calls to logging functions that raised a warning.

Changes in version 1.0.2 (2021-05-23)
+ Bug fix: correct return type of searchForEntries(), which now returns always a character vector and never NULL.

Changes in version 1.0.3 (2021-05-26)
+ Bug fix: correct generic test of searchForEntries(), allowing testing with NA value.

Changes in version 1.1.0 (???)
+ Allow skiping of some fields when testing searchForEntries().