@@ -36,11 +36,6 @@ initialize=function(...) {
 private=list(
 doGenerate=function(overwrite=FALSE, fail=TRUE) {
 
-    # Generate testthat.R script
-    private$createGenerator(ExtFileGenerator, template='testthat.R',
-        folder='tests', filename='testthat.R')$generate(overwrite=overwrite,
-        fail=fail)
-
     # Generate tests
     private$generateDefaultTests(overwrite=overwrite, fail=fail)
     private$generateLongTests(overwrite=overwrite, fail=fail)
@@ -50,7 +45,7 @@ doGenerate=function(overwrite=FALSE, fail=TRUE) {
 ,generateResFile=function(overwrite=FALSE, fail=TRUE) {
 
     # Generate reference file resource if none exists
-    resFolder <- c('tests', 'testthat', 'res')
+    resFolder <- c('inst', 'testref')
     resPath <- getFolderFromVect(c(private$path, resFolder))
     if (dir.exists(resPath) && length(Sys.glob(file.path(resPath, '/*'))) == 0)
         private$createGenerator(ExtFileGenerator, template='entry-0001.json',
@@ -60,8 +55,13 @@ doGenerate=function(overwrite=FALSE, fail=TRUE) {
 
 ,generateLongTests=function(overwrite=FALSE, fail=TRUE) {
 
+    # Generate testthat.R script
+    private$createGenerator(ExtFileGenerator, template='testthat.R',
+        folder='longtests', filename='testthat.R')$generate(overwrite=overwrite,
+        fail=fail)
+
     # Generate long tests
-    longTestFolder <- c('tests', 'long')
+    longTestFolder <- c('longtests', 'testthat')
     longTestPath <- getFolderFromVect(c(private$path, longTestFolder))
     if (dir.exists(longTestPath)
         && length(Sys.glob(file.path(longTestPath, '/*init_logging*.R'))) == 0)
@@ -82,6 +82,15 @@ doGenerate=function(overwrite=FALSE, fail=TRUE) {
 }
 
 ,generateDefaultTests=function(overwrite=FALSE, fail=TRUE) {
+
+    # Generate building options
+    private$createGenerator(ExtFileGenerator, template='BBSoptions',
+        filename='.BBSoptions')$generate(overwrite=overwrite, fail=fail)
+
+    # Generate testthat.R script
+    private$createGenerator(ExtFileGenerator, template='testthat.R',
+        folder='tests', filename='testthat.R')$generate(overwrite=overwrite,
+        fail=fail)
 
     # Generate R test files if no init logging file exists
     testthatFolder <- c('tests', 'testthat')
