@@ -1,0 +1,1 @@
+RunLongTests: TRUE
